--- a/src/app/components/buitres/buitres.component.html
+++ b/src/app/components/buitres/buitres.component.html
@@ -11,7 +11,7 @@
         <div class="search-box">
             <i class="fas fa-search search-icon"></i>
             <input type="text" [(ngModel)]="searchQuery" (ngModelChange)="onSearchChange($event)"
-                placeholder="Escribe el nombre de la persona..." class="search-input" autocomplete="off">
+                placeholder="Escribe el nombre o email de la persona..." class="search-input" autocomplete="off">
 
             <!-- Suggestions Dropdown -->
             <div class="search-suggestions" *ngIf="searchQuery.length >= 2">
