tags y comentarios funcionales

--- a/src/app/components/buitres-detail/buitres-detail.component.html
+++ b/src/app/components/buitres-detail/buitres-detail.component.html
@@ -100,7 +100,9 @@
                         </div>
                         <p class="comment-body">{{ comment.content }}</p>
                         <div class="comment-footer">
-                            <span class="text-muted"><i class="fas fa-heart me-1"></i> {{ comment.likes_count }}</span>
+                            <span class="text-muted cursor-pointer" (click)="likeComment(comment.id)" title="Dar like">
+                                <i class="fas fa-heart me-1"></i> {{ comment.likes_count }}
+                            </span>
                         </div>
                     </div>
                 </div>
